<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.smartbus.heze.exam.ExamListActivity">

    <com.smartbus.heze.http.views.Header
        android:id="@+id/header"
        style="@style/Header"
        app:header_title="@string/exam_list">
    </com.smartbus.heze.http.views.Header>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb1"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/rb1"
                    android:text="@string/learn_data" />

                <RadioButton
                    android:id="@+id/rb2"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/rb2"
                    android:text="@string/online_exam" />

                <RadioButton
                    android:id="@+id/rb3"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/rb3"
                    android:text="@string/found_exam" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb4"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/rb4"
                    android:text="@string/simulate_exam" />

                <RadioButton
                    android:id="@+id/rb5"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/rb5"
                    android:text="@string/income_rank" />

                <RadioButton
                    android:id="@+id/rb6"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/rb6"
                    android:text="@string/class_mileage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb7"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/rb7"
                    android:text="@string/rewards_penalties" />

                <RadioButton
                    android:id="@+id/rb8"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/rb8"
                    android:text="@string/oil_consumption" />

                <RadioButton
                    android:id="@+id/rb9"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/rb9"
                    android:text="@string/maintain" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb10"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/rb10"
                    android:text="@string/safe_mileage" />

                <RadioButton
                    android:id="@+id/rb11"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/flow_item1"
                    android:text="@string/complaint_fines" />

                <RadioButton
                    android:id="@+id/rb12"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/flow_item2"
                    android:text="@string/send_num" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb13"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/flow_item3"
                    android:text="@string/start_content" />

                <RadioButton
                    android:id="@+id/rb14"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/flow_item4"
                    android:text="@string/start_driver" />

                <RadioButton
                    android:id="@+id/rb15"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/flow_item5"
                    android:text="@string/gps_mileage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb16"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/flow_item6"
                    android:text="@string/carvehicle" />

                <RadioButton
                    android:id="@+id/rb17"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/flow_item7"
                    android:text="@string/day_compar" />

                <RadioButton
                    android:id="@+id/rb18"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/rb5"
                    android:text="@string/jianzi_yp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb19"
                    style="@style/RadionButton"
                    android:drawableTop="@drawable/flow_item19"
                    android:text="@string/compar_list" />

                <RadioButton
                    style="@style/RadionButton"
                    android:visibility="invisible"
                    android:drawableTop="@drawable/flow_item7"
                    android:text="@string/day_compar" />

                <RadioButton
                    style="@style/RadionButton"
                    android:visibility="invisible"
                    android:drawableTop="@drawable/rb5"
                    android:text="@string/jianzi_yp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
