<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".main.activity.MainActivity">

    <com.smartbus.heze.http.views.Header
        android:id="@+id/header"
        style="@style/Header"
        android:visibility="gone"
        app:header_is_left_iv_visiable="false"
        app:header_title="@string/app_name">
    </com.smartbus.heze.http.views.Header>

    <FrameLayout
        android:layout_weight="1"
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_below="@+id/fragment_container"
        android:layout_height="55dip"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb1"
            android:checked="true"
            style="@style/RadionButton"
            android:drawableTop="@drawable/tab_01_bg"
            android:text="@string/first_page"/>
        <RadioButton
            android:id="@+id/rb2"
            style="@style/RadionButton"
            android:drawableTop="@drawable/tab_02_bg"
            android:text="@string/will_do"/>
        <RadioButton
            android:id="@+id/rb3"
            style="@style/RadionButton"
            android:drawableTop="@drawable/tab_03_bg"
            android:text="@string/oa_will_do"/>
        <RadioButton
            android:id="@+id/rb4"
            style="@style/RadionButton"
            android:drawableTop="@drawable/tab_04_bg"
            android:text="@string/my_person"/>
    </RadioGroup>

</LinearLayout>
