<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.smartbus.heze.http.views.Header
        android:id="@+id/header"
        app:header_is_left_iv_visiable="false"
        style="@style/Header"
        app:header_title="@string/app_name">
    </com.smartbus.heze.http.views.Header>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:backgroundTint="@color/color_bg_selected"
        android:orientation="vertical">

        <com.smartbus.heze.http.views.XCRoundImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/color_bg_selected"
            android:src="@drawable/myphoto" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/myinform"
        style="@style/linerlayout"
        android:background="@color/whith">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:src="@drawable/myinform" />

        <TextView
            style="@style/TextView"
            android:gravity="center_vertical"
            android:text="@string/my_name"
            android:textColor="@color/xiaohei" />

        <TextView
            android:id="@+id/tvmyName"
            style="@style/TextView"
            android:gravity="center"
            android:textColor="@color/xiaohei" />
    </LinearLayout>


    <LinearLayout
        android:visibility="gone"
        android:id="@+id/studyArchives"
        style="@style/linerlayout"
        android:background="@color/whith">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:src="@drawable/quit" />

        <TextView
            style="@style/TextView"
            android:gravity="center_vertical"
            android:text="@string/my_status"
            android:textColor="@color/xiaohei" />

        <TextView
            android:id="@+id/tvMyStatus"
            style="@style/TextView"
            android:gravity="center"
            android:textColor="@color/xiaohei" />
    </LinearLayout>
    <View style="@style/HourLine" />

    <LinearLayout
        style="@style/linerlayout"
        android:background="@color/whith">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:padding="3dp"
            android:src="@drawable/query_upquestion" />

        <TextView
            style="@style/TextView"
            android:gravity="center_vertical"
            android:text="@string/current_version"
            android:textColor="@color/xiaohei" />

        <TextView
            android:id="@+id/tvVersion"
            style="@style/TextView"
            android:gravity="center"
            android:textColor="@color/xiaohei" />
    </LinearLayout>
    <View style="@style/HourLine" />

    <Button
        android:id="@+id/btnQuit"
        style="@style/Button"
        android:text="@string/quit_app"/>

</LinearLayout>